--- a/App.config
+++ b/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <connectionStrings>
+      <add name="BaseLocal" connectionString="Data Source=localhost\SQLSERVER2012;Initial Catalog=GD1C2018;User Id=gdHotel2018;Password=gd2018;" />
+    </connectionStrings>
 </configuration>
