--- a/App.config
+++ b/App.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
-    <connectionStrings>
-      <add name="BaseLocal" connectionString="Data Source=localhost\SQLSERVER2012;Initial Catalog=GD1C2018;User Id=gdHotel2018;Password=gd2018;" />
-    </connectionStrings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <appSettings>
+    <add key="BaseLocal" value="Data Source=localhost\SQLSERVER2012;Initial Catalog=GD1C2018;User Id=gdHotel2018;Password=gd2018;"/>
+  </appSettings>
 </configuration>
