Arrojo una excepcion al no encontrar por ID

--- a/FrbaHotel.csproj
+++ b/FrbaHotel.csproj
@@ -90,6 +90,7 @@
     <Compile Include="CancelarReserva\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Excepciones\NoExisteIDException.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
