--- a/FrbaHotel.csproj
+++ b/FrbaHotel.csproj
@@ -91,6 +91,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Excepciones\NoExisteIDException.cs" />
+    <Compile Include="Excepciones\NoExisteNombreException.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
