--- a/FrbaHotel.csproj
+++ b/FrbaHotel.csproj
@@ -85,11 +85,11 @@
     <Compile Include="AbmRol\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="AbmRol\ListadoRoles.cs">
+    <Compile Include="AbmRol\ABMRoles.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AbmRol\ListadoRoles.Designer.cs">
-      <DependentUpon>ListadoRoles.cs</DependentUpon>
+    <Compile Include="AbmRol\ABMRoles.Designer.cs">
+      <DependentUpon>ABMRoles.cs</DependentUpon>
     </Compile>
     <Compile Include="CancelarReserva\Form1.cs">
       <SubType>Form</SubType>
@@ -151,8 +151,8 @@
     <Compile Include="Repositorios\RepositorioFuncionalidad.cs" />
     <Compile Include="Repositorios\Repositorio.cs" />
     <Compile Include="Repositorios\RepositorioRol.cs" />
-    <EmbeddedResource Include="AbmRol\ListadoRoles.resx">
-      <DependentUpon>ListadoRoles.cs</DependentUpon>
+    <EmbeddedResource Include="AbmRol\ABMRoles.resx">
+      <DependentUpon>ABMRoles.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
