--- a/FrbaHotel.csproj
+++ b/FrbaHotel.csproj
@@ -142,6 +142,7 @@
       <DependentUpon>FormLogin.cs</DependentUpon>
     </Compile>
     <Compile Include="Modelo\Funcionalidad.cs" />
+    <Compile Include="Modelo\Hotel.cs" />
     <Compile Include="Modelo\Rol.cs" />
     <Compile Include="Modelo\Usuario.cs" />
     <Compile Include="Principal.cs">
