Se genera el modelo del Consumible. Se corrige en el DER la relacion entre Consumible e ItemFactura

--- a/FrbaHotel.csproj
+++ b/FrbaHotel.csproj
@@ -142,6 +142,7 @@
       <DependentUpon>FormLogin.cs</DependentUpon>
     </Compile>
     <Compile Include="Modelo\Cliente.cs" />
+    <Compile Include="Modelo\Consumible.cs" />
     <Compile Include="Modelo\Direccion.cs" />
     <Compile Include="Modelo\Funcionalidad.cs" />
     <Compile Include="Modelo\Hotel.cs" />
