--- a/FrbaHotel.csproj
+++ b/FrbaHotel.csproj
@@ -146,6 +146,7 @@
     <Compile Include="Modelo\Direccion.cs" />
     <Compile Include="Modelo\Estadia.cs" />
     <Compile Include="Modelo\EstadoReserva.cs" />
+    <Compile Include="Modelo\Factura.cs" />
     <Compile Include="Modelo\Funcionalidad.cs" />
     <Compile Include="Modelo\Hotel.cs" />
     <Compile Include="Modelo\Identidad.cs" />
