--- a/FrbaHotel.csproj
+++ b/FrbaHotel.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Modelo\Regimen.cs" />
     <Compile Include="Modelo\Reserva.cs" />
     <Compile Include="Modelo\Rol.cs" />
+    <Compile Include="Modelo\TipoHabitacion.cs" />
     <Compile Include="Modelo\Usuario.cs" />
     <Compile Include="Principal.cs">
       <SubType>Form</SubType>
