Se incluyen todos los archivos fuente en el proyecto

--- a/FrbaHotel.csproj
+++ b/FrbaHotel.csproj
@@ -97,9 +97,23 @@
     <Compile Include="AbmRegimen\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="AbmRol\ListadoRoles.cs" />
-    <Compile Include="AbmRol\ListadoRoles.Designer.cs">
-      <DependentUpon>ListadoRoles.cs</DependentUpon>
+    <Compile Include="AbmRol\ABMRoles.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AbmRol\ABMRoles.Designer.cs">
+      <DependentUpon>ABMRoles.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AbmRol\AltaRol.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AbmRol\AltaRol.Designer.cs">
+      <DependentUpon>AltaRol.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AbmRol\ModificacionRol.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AbmRol\ModificacionRol.Designer.cs">
+      <DependentUpon>ModificacionRol.cs</DependentUpon>
     </Compile>
     <Compile Include="CancelarReserva\Form1.cs">
       <SubType>Form</SubType>
@@ -133,8 +147,30 @@
     <Compile Include="Login\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Login\FormLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login\FormLogin.Designer.cs">
+      <DependentUpon>FormLogin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Modelo\Categoria.cs" />
+    <Compile Include="Modelo\CierreTemporal.cs" />
+    <Compile Include="Modelo\Cliente.cs" />
+    <Compile Include="Modelo\Consumible.cs" />
+    <Compile Include="Modelo\Direccion.cs" />
+    <Compile Include="Modelo\Estadia.cs" />
+    <Compile Include="Modelo\EstadoReserva.cs" />
+    <Compile Include="Modelo\Factura.cs" />
     <Compile Include="Modelo\Funcionalidad.cs" />
+    <Compile Include="Modelo\Habitacion.cs" />
+    <Compile Include="Modelo\Hotel.cs" />
+    <Compile Include="Modelo\Identidad.cs" />
+    <Compile Include="Modelo\ItemFactura.cs" />
+    <Compile Include="Modelo\Regimen.cs" />
+    <Compile Include="Modelo\Reserva.cs" />
     <Compile Include="Modelo\Rol.cs" />
+    <Compile Include="Modelo\TipoHabitacion.cs" />
+    <Compile Include="Modelo\Usuario.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistrarConsumible\Form1.cs">
@@ -149,12 +185,25 @@
     <Compile Include="RegistrarEstadia\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Repositorios\RepositorioCategoria.cs" />
+    <Compile Include="Repositorios\RepositorioCierreTemporal.cs" />
+    <Compile Include="Repositorios\RepositorioDireccion.cs" />
     <Compile Include="Repositorios\RepositorioFuncionalidad.cs" />
     <Compile Include="Repositorios\Repositorio.cs" />
+    <Compile Include="Repositorios\RepositorioHabitacion.cs" />
     <Compile Include="Repositorios\RepositorioHotel.cs" />
+    <Compile Include="Repositorios\RepositorioRegimen.cs" />
     <Compile Include="Repositorios\RepositorioRol.cs" />
-    <EmbeddedResource Include="AbmRol\ListadoRoles.resx">
-      <DependentUpon>ListadoRoles.cs</DependentUpon>
+    <Compile Include="Repositorios\RepositorioTipoHabitacion.cs" />
+    <Compile Include="Repositorios\RepositorioUsuario.cs" />
+    <EmbeddedResource Include="AbmRol\ABMRoles.resx">
+      <DependentUpon>ABMRoles.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AbmRol\AltaRol.resx">
+      <DependentUpon>AltaRol.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AbmRol\ModificacionRol.resx">
+      <DependentUpon>ModificacionRol.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
