Se borran los archivos de ABMHotel que quedaron de un commit anterior. Se añaden todos los archivos que quedaron fuera del proyecto.

--- a/TestingFrbaHotel/TestingFrbaHotel.csproj
+++ b/TestingFrbaHotel/TestingFrbaHotel.csproj
@@ -53,6 +53,7 @@
     <Compile Include="TestRepositorioFuncionalidad.cs" />
     <Compile Include="TestRepositorioRol.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestRepositorioUsuario.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FrbaHotel.csproj">
