Se corrige tipo de dato de Piso y NumeroCalle, se crea Test Repositorio Direccion

--- a/TestingFrbaHotel/TestingFrbaHotel.csproj
+++ b/TestingFrbaHotel/TestingFrbaHotel.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="TestRepositorioDireccion.cs" />
     <Compile Include="TestRepositorioIdentidad.cs" />
     <Compile Include="TestRepositorioFuncionalidad.cs" />
     <Compile Include="TestRepositorioRol.cs" />
