--- a/FrbaHotel.csproj
+++ b/FrbaHotel.csproj
@@ -160,7 +160,7 @@
     <Compile Include="Modelo\Hotel.cs" />
     <Compile Include="Modelo\Identidad.cs" />
     <Compile Include="Modelo\ItemFactura.cs" />
-    <Compile Include="Modelo\LectorSql.cs" />
+    <Compile Include="Repositorios\SafeSqlTypeReader.cs" />
     <Compile Include="Modelo\Regimen.cs" />
     <Compile Include="Modelo\Reserva.cs" />
     <Compile Include="Modelo\Rol.cs" />
