--- a/FrbaHotel.csproj
+++ b/FrbaHotel.csproj
@@ -115,6 +115,12 @@
     <Compile Include="CancelarReserva\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FuncionesAdicionales.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FuncionesAdicionales.Designer.cs">
+      <DependentUpon>FuncionesAdicionales.cs</DependentUpon>
+    </Compile>
     <Compile Include="Excepciones\NoExisteIDException.cs" />
     <Compile Include="Excepciones\NoExisteNombreException.cs" />
     <Compile Include="Form1.cs">
@@ -172,9 +178,6 @@
     <Compile Include="PantallaPrincipal.Designer.cs">
       <DependentUpon>PantallaPrincipal.cs</DependentUpon>
     </Compile>
-    <Compile Include="Principal.cs">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistrarConsumible\Form1.cs">
@@ -216,6 +219,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AbmUsuario\AltaUsuario.resx">
       <DependentUpon>AltaUsuario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FuncionesAdicionales.resx">
+      <DependentUpon>FuncionesAdicionales.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Login\FormLogin.resx">
+      <DependentUpon>FormLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PantallaPrincipal.resx">
       <DependentUpon>PantallaPrincipal.cs</DependentUpon>
