Se hace un refactor de la pantalla de Login, resta filtrar las funcionalidades extra segun los roles que tenga el usuario

--- a/FrbaHotel.csproj
+++ b/FrbaHotel.csproj
@@ -124,6 +124,7 @@
     <Compile Include="CancelarReserva\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Excepciones\UsuarioBloqueadoException.cs" />
     <Compile Include="Excepciones\ErrorDeAutenticacionException.cs" />
     <Compile Include="FuncionesAdicionales.cs">
       <SubType>Form</SubType>
