--- a/FrbaHotel.csproj
+++ b/FrbaHotel.csproj
@@ -91,6 +91,7 @@
     <Compile Include="AbmHotel\DropHotel.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="AbmHotel\request\SearchHotelRequest.cs" />
     <Compile Include="AbmHotel\SearchHotel.cs">
       <SubType>Form</SubType>
     </Compile>
