--- a/FrbaHotel.csproj
+++ b/FrbaHotel.csproj
@@ -91,6 +91,8 @@
     <Compile Include="AbmHotel\DropHotel.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="AbmHotel\request\BajaTemporal.cs" />
+    <Compile Include="AbmHotel\request\SearchHotelRequest.cs" />
     <Compile Include="AbmHotel\SearchHotel.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -136,6 +138,7 @@
     <Compile Include="CancelarReserva\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Excepciones\RequestInvalidoException.cs" />
     <Compile Include="Excepciones\UsuarioBloqueadoException.cs" />
     <Compile Include="Excepciones\ErrorDeAutenticacionException.cs" />
     <Compile Include="FuncionesAdicionales.cs">
