--- a/TestingFrbaHotel/TestingFrbaHotel.csproj
+++ b/TestingFrbaHotel/TestingFrbaHotel.csproj
@@ -53,6 +53,7 @@
     <Compile Include="ModelBuilder\HabitacionBuilder.cs" />
     <Compile Include="ModelBuilder\HotelBuilder.cs" />
     <Compile Include="ModelBuilder\TipoHabitacionBuilder.cs" />
+    <Compile Include="TestRepositorioCliente.cs" />
     <Compile Include="TestRepositorioHabitacion.cs" />
     <Compile Include="TestRepositorioHotel.cs" />
     <Compile Include="TestRepositorioDireccion.cs" />
