--- a/App.config
+++ b/App.config
@@ -5,5 +5,6 @@
   </startup>
   <appSettings>
     <add key="BaseLocal" value="Data Source=localhost\SQLSERVER2012;Initial Catalog=GD1C2018;User Id=gdHotel2018;Password=gd2018;" />
+	<add key="FechaSistema" value="2018-06-14 00:00:00.000" />
   </appSettings>
 </configuration>
