--- a/TestingFrbaHotel/TestingFrbaHotel.csproj
+++ b/TestingFrbaHotel/TestingFrbaHotel.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="TestRepositorioEstadia.cs" />
     <Compile Include="ModelBuilder\HabitacionBuilder.cs" />
     <Compile Include="ModelBuilder\HotelBuilder.cs" />
     <Compile Include="ModelBuilder\TipoHabitacionBuilder.cs" />
