--- a/FrbaHotel.csproj
+++ b/FrbaHotel.csproj
@@ -180,6 +180,9 @@
     <Compile Include="Login\FormLogin.Designer.cs">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="ModelBuilder\HabitacionBuilder.cs" />
+    <Compile Include="ModelBuilder\HotelBuilder.cs" />
+    <Compile Include="ModelBuilder\TipoHabitacionBuilder.cs" />
     <Compile Include="Modelo\Categoria.cs" />
     <Compile Include="Modelo\CierreTemporal.cs" />
     <Compile Include="Modelo\Cliente.cs" />
